--- a/src/App.css
+++ b/src/App.css
@@ -1,8 +1,9 @@
 .full{
   background-image: url("C:\Users\prvbs .Rakesh\OneDrive\Documents\GitHub\my\img\1.jpeg");
-  margin: auto;
-  padding: 0%;
   
+  background-size: cover;
+  background-repeat: no-repeat;
+
 }
 .app {
   
@@ -15,7 +16,8 @@
 }
 
 .calendar-container {
-  width: 40%;
+  
+  width: auto;
   margin: auto;
   padding: 2rem;
   background-color: #0f1525;
@@ -25,8 +27,8 @@
 }
 
 .habits-container {
-  width: 60%;
-  width: 50%;
+  
+  width: auto;
   text-align: center;
   font-size: 1.5em;
   color: #030247;
@@ -36,15 +38,26 @@
   
 }
 
-ul {
+.sucess {
+
+  display: inline-block;
   color: #4b0505;
-  list-style-type: none;
-  padding: 0;
+  list-style-type: armenian;
+  width: 800px;
+  height: 300px;
+  overflow: hidden;
+  overflow-y: scroll;
+  text-transform: uppercase;
+  text-align: center;
+  justify-content: center;
+  
+
+  ;
 
 }
 
 li {
-  color: #04216e;
+  color: #9e3207;
   margin-bottom: 10px;
   
   
@@ -52,13 +65,15 @@ li {
 
 input[type="checkbox"] {
 
-  color: rgb(4, 66, 46);
-  margin-right: 20px;
+  background-color: aquamarine;
+  color: rgb(143, 12, 12);
+  margin: 10px;
+  padding: 5px;
 }
 
 .add-habit-container {
 
-  border: solid black 2px;
+  border: solid rgb(3, 3, 3) 2px;
   text-align: center;
   margin-top: 10px;
   justify-content: center;
@@ -75,7 +90,7 @@ input[type="checkbox"] {
 .list-name{
   font-size: 30px;
   text-align: center;
-  margin-left: 10px;
+ 
 
 }
 .head{
@@ -97,14 +112,18 @@ input[type="checkbox"] {
   justify-content: space-between;
   padding: 5px 10px;
   border-radius: 0%;
-  background-color:#913532;
+  background-color:#6e0d09;
   text-align: center;
 }
 .place{
   float: center;
   margin-right: 40px;
   color: rgb(0, 0, 0);
-  background-color: rgb(207, 198, 198);
+  text-transform: uppercase;
+  text-align: center;
+  font-size: 15px;
+  font-weight: 400;
+  background-color: rgb(248, 246, 246);
   border: darkblue
 
 }
@@ -127,5 +146,19 @@ input[type="checkbox"] {
   position: relative;
   color: whitesmoke;
   justify-content: center;
-  text-align: right;
+  text-align: center;
+}
+.re{
+  color: red;
+}
+.gre{
+  color: green;
+
+}
+.bla{
+  color: #805b00;
+}
+h2{
+  text-transform: uppercase;
+  font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
 }
